# chess

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  bugs.md  fen_gen.py  ideas.md
.github/workflows/: build.yml
docs/: CMakeLists.txt  Doxyfile.in
ext/sml/: README.md
src/: CMakeLists.txt  ai_helper.h  bench.h  board.cpp  board.h  board_debug.h  board_factory.cpp  board_factory.h  chess_game.cpp  chess_game.h  chess_player.cpp  chess_player.h  common_debug.h  game.h  main.cpp  move.cpp  move.h  move_debug.h  piece_rules.cpp  piece_rules.h  rules.cpp  rules.h  types.h
src/gui/: CMakeLists.txt  assets.cpp  assets.h  board_window.cpp  board_window.h  human_gui_player.h  log_window.cpp  log_window.h  main.cpp  main.h  texture.cpp
src/lib/: CMakeLists.txt  ai_helper.cpp  ai_helper.h  board.cpp  board.h  board_debug.h  chess.h  chess_game.cpp  chess_game.h  chess_game_sm.h  chess_player.h  common_debug.h  game.h  move.h  piece_rules.cpp  rules.cpp
src/lib/test/: CMakeLists.txt  common.h  main.cpp  main.h  test_debug.cpp
src/test/: CMakeLists.txt  common.cpp  common.h  main.cpp  test_board.cpp  test_move.cpp  test_rules.cpp
test/: test_board.cpp  test_rules.cpp
